--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         </footer>
     </div>
     <script src="./js/app.js"></script>
+    <script src="./js/silabas.js"></script>
 </body>
 </html>
