se agrego el la logica para hacer funcionar el juego en hiragana, tambien se añadio el enter como boton para enviar datos y validar el puntaje o el juego en general

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </header>
         <main class="main">
             <div class="main__container">
-                <p><span class="main__contador" id="aciertos">0</span> / <span id="cantidad">0</span></p>
-                <span id="silabaRandom" class="main__silabaRandom">あ</span>
-                    <textarea  id="respuesta" onkeypress="cancelar()" maxlength="3" placeholder="Ingrese el texto"></textarea>
-                    <button id="btnEnviar" class="btnEnviar">Hiragana</button>
+                <p><span class="main__contador" id="aciertos"></span> / <span id="cantidad"></span></p>
+                <span id="silabaRandom" class="main__silabaRandom">る</span>
+                    <textarea  id="respuesta" autofocus  onkeypress="enterbtn()" maxlength="3" placeholder="Ingrese el texto"></textarea>
+                    <button id="btnEnviar" class="btnEnviar">enviar</button>
             </div>
         </main>
         <footer>
