Se agrego el silabario katakana (puede mejorar) y arreglos en diseño de los botones

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <header class="header">
             <span class="header__navGuia">Guia</span>
             <nav class="header__button">
-                <button id="hira">Hiragana</button>
-                <button id="kata">Katakana</button>
+                <button id="hira" class="seleccionado on">Hiragana</button>
+                <button id="kara" class="noSeleccionado off">Katakana</button>
             </ul>
         </nav>
     </header>
         <main class="main">
             <div class="main__container">
-                <p><span class="main__contador" id="aciertos"></span> / <span id="cantidad"></span></p>
-                <span id="silabaRandom" class="main__silabaRandom">る</span>
+                <p><span class="main__contador" id="aciertos">0</span> / <span id="cantidad">0</span></p>
+                <span id="silabaRandom" class="main__silabaRandom"></span>
                     <textarea  id="respuesta" autofocus  onkeypress="enterbtn()" maxlength="3" placeholder="Ingrese el texto"></textarea>
                     <button id="btnEnviar" class="btnEnviar">enviar</button>
             </div>
