se arreglo un problema en el cual se repetia las silabas de hiragana en el katakana

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main class="main">
             <div class="main__container">
                 <p><span class="main__contador" id="aciertos">0</span> / <span id="cantidad">0</span></p>
-                <span id="silabaRandom" class="main__silabaRandom"></span>
+                <span id="silabaRandom" class="main__silabaRandom">る</span>
                     <textarea  id="respuesta" autofocus  onkeypress="enterbtn()" maxlength="3" placeholder="Ingrese el texto"></textarea>
                     <button id="btnEnviar" class="btnEnviar">enviar</button>
             </div>
