--- a/index.html
+++ b/index.html
@@ -36,7 +36,281 @@
                     <textarea  id="respuesta" autofocus  onkeypress="enterbtn()" maxlength="3" placeholder="Ingrese el texto"></textarea>
                     <button id="btnEnviar" class="btnEnviar">enviar</button>
             </div>
-            <div class="guia" id="contenido_guia">
+            <div class="guiaMobile" id="contenido_guia">
+                <div class="guia__container">
+                    <div class="guia__silabarios">
+                        <div class="hiragana">
+                            <h2>HIRAGANA</h2>
+                            <table>
+                                <tr>
+                                    <th>N</th>
+                                    <th>WA</th>
+                                    <th>RA</th>
+                                    <th>YA</th>
+                                    <th>MA</th>
+                                    <th>HA</th>
+                                    <th>NA</th>
+                                    <th>TA</th>
+                                    <th>SA</th>
+                                    <th>KA</th>
+                                    <th>A</th>
+                                </tr>
+                                <tr>
+                                    <td>ん</td>
+                                    <td>わ</td>
+                                    <td>ら</td>
+                                    <td>や</td>
+                                    <td>ま</td>
+                                    <td>は</td>
+                                    <td>な</td>
+                                    <td>た</td>
+                                    <td>さ</td>
+                                    <td>か</td>
+                                    <td>あ</td>
+                                </tr>
+                                <tr>
+                                    <th>  </th>
+                                    <th>  </th>
+                                    <th>RI</th>
+                                    <th>  </th>
+                                    <th>MI</th>
+                                    <th>HI</th>
+                                    <th>NI</th>
+                                    <th>CHI</th>
+                                    <th>SHI</th>
+                                    <th>KI</th>
+                                    <th>I</th>
+                                </tr>
+                                <tr>
+                                    <td>　</td>
+                                    <td>　</td>
+                                    <td>り</td>
+                                    <td>　</td>
+                                    <td>ま</td>
+                                    <td>ひ</td>
+                                    <td>に</td>
+                                    <td>ち</td>
+                                    <td>ち</td>
+                                    <td>き</td>
+                                    <td>い</td>
+                                </tr>
+                                <tr>
+                                    <th>  </th>
+                                    <th>  </th>
+                                    <th>RU</th>
+                                    <th>YU</th>
+                                    <th>MU</th>
+                                    <th>FU</th>
+                                    <th>NU</th>
+                                    <th>TSU</th>
+                                    <th>SU</th>
+                                    <th>KU</th>
+                                    <th>U</th>
+                                </tr>
+                                <tr>
+                                    <td>　</td>
+                                    <td>　</td>
+                                    <td>る</td>
+                                    <td>ゆ</td>
+                                    <td>む</td>
+                                    <td>ふ</td>
+                                    <td>ぬ</td>
+                                    <td>つ</td>
+                                    <td>す</td>
+                                    <td>く</td>
+                                    <td>う</td>
+                                </tr>
+                                <tr>
+                                    <th>  </th>
+                                    <th>  </th>
+                                    <th>RE</th>
+                                    <th>  </th>
+                                    <th>ME</th>
+                                    <th>HE</th>
+                                    <th>NE</th>
+                                    <th>TE</th>
+                                    <th>SE</th>
+                                    <th>KE</th>
+                                    <th>E</th>
+                                </tr>
+                                <tr>
+                                    <td>　</td>
+                                    <td>　</td>
+                                    <td>れ</td>
+                                    <td>　</td>
+                                    <td>め</td>
+                                    <td>へ</td>
+                                    <td>ね</td>
+                                    <td>て</td>
+                                    <td>せ</td>
+                                    <td>け</td>
+                                    <td>え</td>
+                                </tr>
+                                <th>  </th>
+                                <th>WO</th>
+                                <th>RO</th>
+                                <th>YO</th>
+                                <th>MO</th>
+                                <th>HO</th>
+                                <th>NO</th>
+                                <th>TO</th>
+                                <th>SO</th>
+                                <th>KO</th>
+                                <th>O</th>
+                            </tr>
+                            <tr>
+                                <td>　</td>
+                                <td>を</td>
+                                <td>ろ</td>
+                                <td>よ</td>
+                                <td>も</td>
+                                <td>ほ</td>
+                                <td>の</td>
+                                <td>と</td>
+                                <td>そ</td>
+                                <td>こ</td>
+                                <td>お</td>
+                            </tr>
+                            </table>
+                        </div>
+                        <div class="katakana">
+                            <h2>KATAKANA</h2>
+                            <table>
+                                <tr>
+                                    <th>N</th>
+                                    <th>WA</th>
+                                    <th>RA</th>
+                                    <th>YA</th>
+                                    <th>MA</th>
+                                    <th>HA</th>
+                                    <th>NA</th>
+                                    <th>TA</th>
+                                    <th>SA</th>
+                                    <th>KA</th>
+                                    <th>A</th>
+                                </tr>
+                                <tr>
+                                    <td>ン</td>
+                                    <td>ワ</td>
+                                    <td>ラ</td>
+                                    <td>ヤ</td>
+                                    <td>マ</td>
+                                    <td>ハ</td>
+                                    <td>ナ</td>
+                                    <td>タ</td>
+                                    <td>サ</td>
+                                    <td>カ</td>
+                                    <td>ア</td>
+                                </tr>
+                                <tr>
+                                    <th>  </th>
+                                    <th>  </th>
+                                    <th>RI</th>
+                                    <th>  </th>
+                                    <th>MI</th>
+                                    <th>HI</th>
+                                    <th>NI</th>
+                                    <th>CHI</th>
+                                    <th>SHI</th>
+                                    <th>KI</th>
+                                    <th>I</th>
+                                </tr>
+                                <tr>
+                                    <td>　</td>
+                                    <td>　</td>
+                                    <td>リ</td>
+                                    <td>　</td>
+                                    <td>ミ</td>
+                                    <td>ヒ</td>
+                                    <td>ニ</td>
+                                    <td>チ</td>
+                                    <td>シ</td>
+                                    <td>キ</td>
+                                    <td>イ</td>
+                                </tr>
+                                <tr>
+                                    <th>  </th>
+                                    <th>  </th>
+                                    <th>RU</th>
+                                    <th>YU</th>
+                                    <th>MU</th>
+                                    <th>FU</th>
+                                    <th>NU</th>
+                                    <th>TSU</th>
+                                    <th>SU</th>
+                                    <th>KU</th>
+                                    <th>U</th>
+                                </tr>
+                                <tr>
+                                    <td>　</td>
+                                    <td>　</td>
+                                    <td>ル</td>
+                                    <td>ユ</td>
+                                    <td>ム</td>
+                                    <td>フ</td>
+                                    <td>ヌ</td>
+                                    <td>ツ</td>
+                                    <td>ス</td>
+                                    <td>ク</td>
+                                    <td>ウ</td>
+                                </tr>
+                                <tr>
+                                    <th>  </th>
+                                    <th>  </th>
+                                    <th>RE</th>
+                                    <th>  </th>
+                                    <th>ME</th>
+                                    <th>HE</th>
+                                    <th>NE</th>
+                                    <th>TE</th>
+                                    <th>SE</th>
+                                    <th>KE</th>
+                                    <th>E</th>
+                                </tr>
+                                <tr>
+                                    <td>　</td>
+                                    <td>　</td>
+                                    <td>レ</td>
+                                    <td>　</td>
+                                    <td>メ</td>
+                                    <td>ヘ</td>
+                                    <td>ネ</td>
+                                    <td>テ</td>
+                                    <td>セ</td>
+                                    <td>ケ</td>
+                                    <td>エ</td>
+                                </tr>
+                                <th>  </th>
+                                <th>WO</th>
+                                <th>RO</th>
+                                <th>YO</th>
+                                <th>MO</th>
+                                <th>HO</th>
+                                <th>NO</th>
+                                <th>TO</th>
+                                <th>SO</th>
+                                <th>KO</th>
+                                <th>O</th>
+                            </tr>
+                            <tr>
+                                <td>　</td>
+                                <td>ヲ</td>
+                                <td>ロ</td>
+                                <td>ヨ</td>
+                                <td>モ</td>
+                                <td>ホ</td>
+                                <td>ノ</td>
+                                <td>ト</td>
+                                <td>ソ</td>
+                                <td>コ</td>
+                                <td>オ</td>
+                            </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="guiaDesktop" id="contenido_guia">
                 <div class="guia__container">
                     <div class="guia__silabarios">
                         <div class="hiragana">
